# BrainstormingBench

./: .gitignore  CLAUDE.md  FUTURE.md  README.md  cli.py  leaderboard.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: tests.yml
adapters/: __init__.py  _transport.py  base.py  brainstorm_kit.py  claude_skill.py  human.py  plain_claude.py  single_technique.py
agents/: brainstorm-runner.md
commands/: metrics.md  run.md
judge/: __init__.py  elo.py  pairwise.py  rubric_v1.md
metrics/: __init__.py  _embeddings.py  _types.py  elaboration.py  flexibility.py  fluency.py  originality.py
plugin/.claude-plugin/: plugin.json
plugin/commands/: battle.md  judge.md  leaderboard.md  metrics.md  run.md
plugin/scripts/: bench.py
plugin/scripts/problems/: v1.json
plugin/scripts/rubrics/: rubric_v1.md
plugin/skills/brainstorming-eval/: SKILL.md
problems/: README.md  v1.yaml
tests/: conftest.py  test_adapters.py  test_bench.py  test_claude_skill.py  test_judge.py  test_metrics.py  test_transport.py
