[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainstormingbench"
version = "0.1.0"
description = "Evaluation framework for brainstorming / creativity systems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Matt Goldwasser" }]
# Researcher path only — needed for `bench metrics`. The plugin path
# (`plugin/scripts/bench.py` for run/battle/judge/report) is stdlib-only.
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "hdbscan>=0.8.33",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
bench = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[tool.setuptools.packages.find]
include = ["metrics*"]
exclude = ["runs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
